# nel-contracts

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
conformance/: conformance_spec.md
conformance/fixtures/canonical/: basic.bytes  basic.json  ledger_event.json
conformance/fixtures/forgery/: forged_kernel_receipt.json
conformance/fixtures/invalid/: capability_internal_only_with_egress.json  content_identity_empty.json  git_work_extension_with_path.json  publish_intent_with_body.json  routing_advice_authoritative.json  routing_signal_negative_count.json  seam_receipt_missing_intent_id.json  work_item_empty_acceptance.json
conformance/fixtures/openenum/: unknown_intent_kind.json
conformance/fixtures/valid/: capability_internal_only.json  content_identity.json  git_work_extension.json  publish_intent.json  routing_advice.json  routing_signal.json  seam_receipt.json  work_item.json  workflow_run.json
schemas/contracts/v1/: approval-request.schema.json  attested-actor.schema.json  capability.schema.json  claimed-actor.schema.json  content-identity.schema.json  decision-record.schema.json  delivery-intent.schema.json  deploy-intent.schema.json  evidence-event.schema.json  external-read-intent.schema.json  (+24 more)
scripts/: check_licenses.py  check_no_private_deps.py  project_schemas.py
src/nel_contracts/: __init__.py  version.py
tests/: support.py  test_canonical_golden_bytes.py  test_capability_default_deny.py  test_conformance_corpus.py  test_dependency_direction.py  test_executor_vocabulary.py  test_forged_authority_untrusted.py  test_gateclass_matches_ssot.py  test_ledger_chain.py  test_metadata_freshness.py  test_open_enum_downgrade.py  test_public_surface.py  test_resolver_hardwired_sealed.py  test_sealed_seam_fail_closed.py  test_seam_port_surface_locked.py  test_work_intent_discriminator.py  test_workitem_vocabulary.py
tests/data/: human_gates.yaml
(+26 files in other folders)
