[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nel-contracts"
version = "0.2.0"
description = "Neutral vocabulary + fail-closed seam port for the NEL Platform (governor: nel-os)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "NEL Platform" }]
keywords = ["nel", "contracts", "seam", "schema"]
# Sole runtime dependency: a narrowly pinned pydantic v2 range. A pydantic point upgrade that
# changes the generated wire form is a deliberate, reviewed contract event (design §7). No
# private package (e.g. nel-os) may appear in ANY dependency section — CI enforces this.
dependencies = [
  "pydantic>=2.11,<2.14",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
  "PyYAML>=6.0,<7",
  "types-PyYAML>=6.0.12",
]

[project.urls]
# TODO(K1/K3): assigned at the D17 public-release gate. The package is local and unpushed
# until then; no public host/repo is claimed here.

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
nel_contracts = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# --basetemp keeps pytest out of the shared %TEMP%\pytest-of-<user> tree whose "pytest-current"
# symlink cleanup raises PermissionError on native Windows (crashing the run before collection).
addopts = "--strict-markers --strict-config --basetemp=.pytest_tmp"
pythonpath = ["src"]
